# Agentic-Ai-Training

./: .env  agentic_rag.ipynb  agentic_rag2.ipynb  lang1.ipynb  main.py  pyproject.toml  requirements.txt  t1.py
.virtual_documents/: Untitled.ipynb
agent-ui/: package-lock.json
training/: pyvenv.cfg
training/Scripts/: activate  activate.bat
